@@ -16,7 +16,6 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.apache.logging.log4j.util.Strings.concat;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FAMILY_COURT_TYPE_ID;
@@ -47,7 +46,7 @@ public class LocationRefDataService {
             );
             return onlyEnglandAndWalesLocations(courtDetails).stream()
                 .sorted(Comparator.comparing(m -> m.getLabel(), Comparator.naturalOrder()))
-                .collect(Collectors.toList());
+                .toList();
         } catch (Exception e) {
             log.error(LOCATION_REFERENCE_DATA_LOOKUP_FAILED + e.getMessage(), e);
         }
@@ -109,10 +108,10 @@ public class LocationRefDataService {
                 }
                 List<String> ids = Arrays.stream(courtList).map(ele -> Arrays.stream(ele.split(":")).toArray()[0]
                     .toString())
-                    .collect(Collectors.toList());
+                    .toList();
                 return ids.contains(location.getCourtEpimmsId());
             })
-            .map(this::getDaDisplayEntry).collect(Collectors.toList()));
+            .map(this::getDaDisplayEntry).toList());
     }
 
     private DynamicListElement getDaDisplayEntry(CourtVenue location) {
@@ -145,10 +144,10 @@ public class LocationRefDataService {
                 }
                 List<String> ids = Arrays.stream(courtList).map(ele -> Arrays.stream(ele.split(":")).toArray()[0]
                     .toString())
-                    .collect(Collectors.toList());
+                    .toList();
                 return ids.contains(location.getCourtEpimmsId());
             })
-            .map(this::getDisplayEntry).collect(Collectors.toList()));
+            .map(this::getDisplayEntry).toList());
     }
 
     private List<DynamicListElement> filterOnboardedCourtList(String courtList, CourtDetails locationRefData) {
